theme/gigasci/test.css
/* Table of Contents:
	1. Reset Styles
	2. Baseline (Default) Styles
	3. Column Structure
	4. Main Column (articles, etc)
	5. Comments and Pingbacks
	6. Sidebar lists and Ads
	7. Footer
*/

body {
    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
    line-height: 1.5;
    color: #333333;
    background-color: white;
    font-weight: 300;
}

h1, .h1 {
    font-size: 2.5em; /* = 40px/16px */
    line-height: 1.1em; /* = 44px/40px */
    font-weight: 300;
    background-color: white;
}

p {
    font-size: 1.2em; /* 16px is the default em size */
    line-height: 1.5em; /* = 22px/14px */
    margin-bottom: 22px;
}

/**************** Pseudo classes ****************/

a:link {
    /*color: red;*/
    /*font-weight: bold;*/
    color: black;
}

a:visited {
    color: black;
}

a:hover {
    color: grey;
    /*padding-bottom: 5px;*/
    /*font-weight: bold;*/
    text-decoration: none;
}

li :link {
    color: black;
    text-decoration: none;
    /*font-weight: bold;*/
}

li a:hover {
    color: grey;
    text-decoration: none;
    /*font-weight: bold;*/
}

/* Nav Bar */

.no-padding {
    padding: 0;
    margin: 0;
}

.gigascience-logo {
    width: 100px;
    height: 50px;
}

.navbar-menu {
    line-height: 50px;
}

.navbar-default {
     background-color: white;
     border-color: #079347;
     border-bottom-width: 2px;
 }

.lower-row {
    position: relative;
    bottom: 25px;
}

.latest-posts-styling {
    font-weight: 300;
}

.top-buffer {
    margin-top:20px;
}

/* Blog Posts */

.blog-post {
    border-bottom: 1px dotted lightgray;
    padding-bottom: 30px;
}


/* Side Bar */

.sidebar-title {
    font-weight: 300;
    font-size: 1.5em;
    padding-top: 40px;
    /*padding-bottom: 20px;*/
    border-top: 2px solid #079347;
    /*border-bottom: 1px solid #e2e4e2;*/
}

.sidebar-content {
    font-weight: 300;
    font-size: 1.0em;
    /*padding-top: 10px;*/
    padding-bottom: 20px;
    /*border-bottom: 1px solid #e2e4e2;*/
}

.sidebar-author {
    padding-top: 90px;
    font-weight: 300;
    text-align: center;
}

.avatar {
    border-radius: 50%;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
}

/* Footer */

.inner-footer {
    font-weight: 300;
    border-color: #079347;
    border-bottom: 2px;
    padding-top: 10px;
    padding-bottom: 10px;
    border-top: 2px solid #079347;
    border-bottom: 2px solid #079347;
}

.footer-title {
    font-weight: 300;
    padding-top: 10px;
    padding-bottom: 10px;
}

.footer-content {
    font-weight: 300;
    padding-top: 10px;
    padding-bottom: 10px;
}

/* Pagination */

.pagination {
    clear:both;
    padding:20px 0;
    position:relative;
    font-size:14px;
    font-weight: 300;
    line-height:13px;
}

.pagination span, .pagination a {
    display:block;
    float:left;
    margin: 2px 2px 2px 0;
    /*padding:6px 9px 5px 9px;*/
    padding:10px 13px 10px 13px;
    text-decoration:none;
    width:auto;
    color:#fff;
    background: #555;
}

.pagination a:hover{
    color:#fff;
    background: #3279BB;
}

.pagination .current{
    /*padding:6px 9px 5px 9px;*/
    padding:10px 13px 10px 13px;
    background: #3279BB;
    color:#fff;
}

/* Read more buttons */
.btn.btn-default.read-more {
    float: right;
    border: 1px solid #E8E8E8;
    color: #079347;
    background-color: transparent;
    margin-top: 10px;
}

/* Comments Form */

#respond {
    margin: 5% 0;
}

#comments {
    display: inline-block;
    clear: both;
    width: 100%;
    /*font-size: 0.8em;*/
    font-weight: 300;
}
ol.commentlist {
    padding: 0;
    margin: 5% 0;
    list-style-type: none;
}
.comment-list {
    padding: 0;
    margin: 5% 0;
    list-style-type: none;
}

.comment-metadata {
    /*font-size: 11px;*/
    /*line-height: 16px;*/
    margin-bottom: 10px;
}

ul.children {
    list-style-type: none;
    padding-left: 5%;
}

article.comment {
    margin: 5% 0;
    padding-left: 80px;
}
.children article.comment {
    padding-left: 60px;
}

.comment footer { font-size: 0.8em; }

.comment p {
    margin: 0.25em 0;
    /*line-height: 1.2;*/
    color: #000;
    /*font-family: chaparral-pro, serif;*/
}

.form-allowed-tags {
    display: none;
}
#commentform label {
    display: none;
}
p.comment-subscription-form {
    clear: both;
}

.comment-subscription-form label {
    display: inline-block !important;
}

input#subscribe_comments {
    padding: 0!important;
    margin: 0!important;
    margin-right: 0.5em!important;
    float: none !important;
}
#commentform p {
    margin: 0;
}

#commentform input, #commentform textarea {
    width: 95%;
    padding: 2.5%;
    background: #f7f7f7;
    border: none;
    margin: 2% 0;
    font-size: 1em;
    border-bottom: 2px dashed #d7d7d7;
    /*font-family: chaparral-pro, serif;*/
}

#commentform input#submit, .button {
    color: #fff;
    border: none !important;
    background: #3dd6b7;
    -webkit-appearance: none;
}
#commentform input#submit:hover, .button:hover {
    background: #81edd7;
}
#commentform input#submit:active, .button:active {
    background: #2baa90;
}

@media ( min-width: 700px ) {
    #commentform input {
        width: 25%;
        float: left;
    }
    .comment-form-author input, .comment-form-email input {
        margin-right: 5% !important;
    }
}

@media ( max-width: 700px ) {
    #commentform input#submit {
        width: 100%!important;
    }
}

